--- a/docs/zh-cn/plugin/i18n.md
+++ b/docs/zh-cn/plugin/i18n.md
@@ -1,14 +1,1 @@
-# 多语言表单控件
-
-#### 定义
-
-``` html
-<i18n-switch></i18n-switch>
-```
-
-> 需要定义配置 `i18n_switch`
-
-#### 使用方法
-
-``` html
-```
+# 多语言选择器
