--- a/docs/component/i18n.md
+++ b/docs/component/i18n.md
@@ -1,6 +1,6 @@
-> 组件均可以使用 Ng-Zorro，设定多语言输入模式需要设定一个统一切换按钮 
+## 多语言设置
 
-在 `card` 的头部加入 `<i18n-switch></i18n-switch>`
+组件均可以使用 Ng-Zorro，设定多语言输入模式需要设定一个统一切换按钮, 在 `card` 的头部加入 `<i18n-switch></i18n-switch>`
 
 ```html
 <ng-template #tools>
